--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "@beyonk/svelte-carousel": "^2.4.0",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "compression": "^1.7.1",
+    "fa-svelte": "^3.1.0",
     "polka": "next",
     "sirv": "^0.4.0",
     "svelte-forms-lib": "^1.1.0",
