--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "femmefaustus",
+  "description": "A Website for Charlotte Lang-Bush",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
@@ -9,14 +9,13 @@
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "test": "run-p --race dev cy:run",
+    "deploy": "surge --project ./__sapper__/export/ --domain femmefaust.us"
   },
   "dependencies": {
-    "@beyonk/svelte-carousel": "^2.4.0",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "compression": "^1.7.1",
-    "fa-svelte": "^3.1.0",
     "polka": "next",
     "sirv": "^0.4.0",
     "svelte-forms-lib": "^1.1.0",
@@ -28,9 +27,11 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@beyonk/svelte-carousel": "^2.4.0",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "fa-svelte": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.0.0",
     "rollup-plugin-babel": "^4.0.2",
@@ -39,6 +40,7 @@
     "sapper": "^0.27.0",
     "semistandard": "^14.2.0",
     "snazzy": "^8.0.0",
+    "surge": "^0.21.3",
     "svelte": "^3.0.0"
   }
 }
