--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "test": "run-p --race dev cy:run",
     "deploy": "surge --project ./__sapper__/export/ --domain femmefaust.us"
   },
+  "git": {
+    "scripts": {
+      "pre-push": "yarn export && yarn deploy"
+    }
+  },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
@@ -33,6 +38,7 @@
     "@rollup/plugin-replace": "^2.2.0",
     "fa-svelte": "^3.1.0",
     "npm-run-all": "^4.1.5",
+    "pre-push": "^0.1.1",
     "rollup": "^2.0.0",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-svelte": "^5.0.1",
