--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
+    "test": "echo \"OK\" && exit 0",
     "deploy": "surge --project ./__sapper__/export/ --domain femmefaust.us"
   },
   "git": {
