--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,13 +7,13 @@
 	"start_url": "/",
 	"icons": [
 		{
-			"src": "logo-192.png",
+			"src": "android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "logo-512.png",
-			"sizes": "512x512",
+			"src": "android-chrome-256x256.png",
+			"sizes": "256x256",
 			"type": "image/png"
 		}
 	]
