--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "test": "echo \"OK\" && exit 0"
   },
   "dependencies": {
-    "@beyonk/svelte-carousel": "^2.4.0",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "compression": "^1.7.1",
@@ -26,6 +25,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@beyonk/svelte-carousel": "~2.8.0",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-replace": "^2.2.0",
