--- a/package.json
+++ b/package.json
@@ -2,43 +2,5 @@
   "name": "femmefaustus",
   "description": "A Website for Charlotte Lang-Bush",
   "license": "MIT",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
-    "test": "echo \"OK\" && exit 0"
-  },
-  "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "compression": "^1.7.1",
-    "polka": "next",
-    "sirv": "^0.4.0",
-    "svelte-forms-lib": "^1.1.0",
-    "yup": "^0.28.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@beyonk/svelte-carousel": "~2.8.0",
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
-    "fa-svelte": "^3.1.0",
-    "npm-run-all": "^4.1.5",
-    "pre-push": "^0.1.1",
-    "rollup": "^2.0.0",
-    "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^5.3.0",
-    "sapper": "^0.27.0",
-    "semistandard": "^14.2.0",
-    "snazzy": "^8.0.0",
-    "svelte": "^3.0.0"
-  }
+  "version": "1.0.0"
 }
