--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "lint": "eslint && prettier . --write --log-level warn --cache"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@remix-run/css-bundle": "^2.1.0",
     "@remix-run/node": "~2.1.0",
     "@remix-run/react": "~2.1.0",
     "@remix-run/serve": "~2.1.0",
@@ -25,8 +30,6 @@
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
-    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   },
   "engines": {
