--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@remix-run/serve": "~2.1.0",
     "isbot": "^3.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0"
   },
   "devDependencies": {
     "@remix-run/dev": "~2.1.0",
