--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@remix-run/node": "~2.1.0",
     "@remix-run/react": "~2.1.0",
     "@remix-run/serve": "~2.1.0",
+    "embla-carousel-autoplay": "^8.0.0-rc14",
+    "embla-carousel-react": "^8.0.0-rc14",
     "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
