--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "yaml": "^2.3.3"
   },
   "devDependencies": {
     "@remix-run/dev": "~2.1.0",
