--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["@modyfi/vite-plugin-yaml/modules"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
