--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "embla-carousel": "^8.0.0-rc22",
     "embla-carousel-autoplay": "^8.0.0-rc22",
-    "embla-carousel-react": "^8.0.0-rc20",
+    "embla-carousel-react": "^8.0.0-rc22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
