Refactors whole website in react/vite/typescript/vanilla extract (#1)
* starting the refactor in vite

-deleting old code in svelte
-getting vite, react, and typescript into it
-adding <meta> theme-color to the head in index.html
-adding the vanilla extract plugin for vite and configuring it in vite.ts
-creating files for types and custom elements that existed in previous version
-adding react router dom and embla carousel dependencies

* scaffolding file structure

-building out file tree as outline
-adding structure for where components and pages go (for sanity reasons)

* refactoring remix components

-adding in carousel component from remix branch
-refactoring nav bar component from remix syntax into react router
-installing react hook forms and fort awesome icons dependencies
-embla carousel stuff is very wonky but it's ok, worry about it later

* Embla Carousel troubleshooting

-importing dependency for autoplay
-restructuring import statement for autoplay
-installing yaml parsing dependency for vite and configuring accordingly
-adding incel play to resume finally
-setting up a preliminary file for the artist statement
-TODO: Troubleshoot yaml parser, resume, and slideshow

* putting in infrastructure to get homepage semiworking

* basic routing set up

* finally gets routing working (and other cleaning)

-installs vite plugin yaml for resume
-debugs client side routing between home and work, adds nav bar
-moves resume.yaml into src directory

* resume and images

-configs and uses yaml parser for resume (and adds resume types in resume component) before importing it to work page
-adding favicon assets
-adding profile pic asset to homepage

* adding assets for carousel

* sets up carousel

* pulling in social and contact, applying some styles

-moves custom elements into src
-changing favicon
-setting app styles
-bringing in social and contact to app, wrapping tsx divs so css targets it
-fixing slideshow 

--- a/package.json
+++ b/package.json
@@ -1,44 +1,38 @@
 {
   "name": "femmefaustus",
-  "description": "A Website for Charlotte Lang-Bush",
-  "license": "MIT",
-  "version": "0.0.1",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
-    "test": "echo \"OK\" && exit 0"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "compression": "^1.7.1",
-    "polka": "next",
-    "sirv": "^0.4.0",
-    "svelte-forms-lib": "^1.1.0",
-    "yup": "^0.28.5"
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "embla-carousel": "^8.0.0-rc22",
+    "embla-carousel-autoplay": "^8.0.0-rc22",
+    "embla-carousel-react": "^8.0.0-rc22",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@beyonk/svelte-carousel": "~2.8.0",
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
-    "fa-svelte": "^3.1.0",
-    "npm-run-all": "^4.1.5",
-    "pre-push": "^0.1.1",
-    "rollup": "^2.0.0",
-    "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^5.3.0",
-    "sapper": "^0.27.0",
-    "semistandard": "^14.2.0",
-    "snazzy": "^8.0.0",
-    "svelte": "^3.0.0"
+    "@modyfi/vite-plugin-yaml": "^1.1.0",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vanilla-extract/vite-plugin": "^3.9.4",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
