--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "surge dist"
+    "deploy": "surge dist femmefaust.us"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
