--- a/src/components/resume.yaml
+++ b/src/components/resume.yaml
@@ -4,7 +4,7 @@ resume:
       - title: Artist-in-Residence, PlayGround PlayGroup (PGPG)
         where: Fresh Ground Pepper, NYC
         when: December 2022 – June 2023
-        desc: Developed a new piece of medieval internet horror, <em>incel play<em> as part of a six-person cohort of artists generating new work, culiminating in a showcase.
+        desc: Developed a new piece of medieval internet horror, <em>incel play</em> as part of a six-person cohort of artists generating new work, culminating in a showcase.
       - title: Playwright and Post-Production Editor, The Screenlit Series
         where: Match:Lit, NYC
         when: Oct 2020 – Present
